--- a/Homework/期末專案提案.ipynb
+++ b/Homework/期末專案提案.ipynb
@@ -84,20 +84,27 @@
         "- 支援查詢導向的會議回應摘要生成。\n",
         "- 回應失敗時自動退回全文摘要以保證任務穩定性。\n",
         "- 預計使用以下指標進行實驗比較：\n",
-        "  - ROUGE Score\n",
-        "  - BERTScore（語意相似度）\n",
+        "\n",
+        "\n",
+        "\n",
+        "| 指標        | 類型           | 評估方式                                              | 優點                                             |\n",
+        "|-------------|----------------|--------------------------------------------------------|--------------------------------------------------|\n",
+        "| ROUGE       | 統計相似度     | 比對 n-gram 重疊                                   | 簡單快速，有明確的重疊指標                      |\n",
+        "| BERT Score   | 語意相似度     | 用 BERT 將句子轉向量 → 計算 Cosine 相似度              | 可量化語意相近但措辭不同的情形                  |\n",
+        "| BART Score | 生成模型打分   | 用 BART 模型評估生成句子與參考句子的合理程度與對應性   | 能反映語意、文法、流暢度，適合開放式摘要任務     |\n",
+        "\n",
         "\n",
         "---\n",
         "\n",
-        "##  四、擴展方向（Optional）\n",
+        "## 四、資料集\n",
         "\n",
-        "- ✅ 探索 DuoAttention 與 Self-Extend 結合長篇輸入。\n",
-        "- ✅ 其他Dense Retriever的使用(Dragon, Contriever)\n",
+        "- QMSum\n",
+        "- PubMedQA (Optional)\n",
         "\n",
         "\n",
         "---\n",
         "\n",
-        "# 五、目前實驗結果\n",
+        "## 五、目前實驗結果\n",
         "\n",
         "\n",
         "| 指標      | 數值  |\n",
@@ -105,7 +112,13 @@
         "| ROUGE-1   | 26.10 |\n",
         "| ROUGE-2   | 7.09  |\n",
         "| ROUGE-L   | 18.33 |\n",
-        "| BERTScore | 86.17 |"
+        "| BERTScore | 86.17 |\n",
+        "\n",
+        "---\n",
+        "##  六、擴展方向（Optional）\n",
+        "\n",
+        "- ✅ 探索 DuoAttention 與 Self-Extend 結合長篇輸入。\n",
+        "- ✅ 其他Dense Retriever的使用(Dragon, Contriever)"
       ],
       "metadata": {
         "id": "wzSc_lFR3MLz"
